# rai_inspection_agent

./: .gitignore  config.toml  pyproject.toml
data/rosbotxl_whoami/documentation/: man.md
demo/: embedding1.py
docs/: locations.md  rag.md
embodiments/: inspection_embodiment.json
rai_inspection_agent/: app.py
rai_inspection_agent/tools/: __init__.py  artifact_analysis.py  gimbal.py  speaker.py
tests/: test_artifact_analysis_tool.py  test_gimbal_tool.py  test_speaker_tool.py
