[project]
name = "rai-inspection-agent"
version = "0.1.0"
description = "Inspection-specific RAI agent and tools."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "rai_core",
  "rai_whoami",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
rai_core = { path = "/home/jazzy/rai/src/rai_core", editable = true }
rai_whoami = { path = "/home/jazzy/rai/src/rai_whoami", editable = true }
